--- a/HTML/index.html
+++ b/HTML/index.html
@@ -17,13 +17,33 @@
         <a href="contact.html">Contact</a>
     </nav>
 
+    <div class="maindiv">
+
     <h1>TYLER LINCOLN</h1>
 
     <!--The landing page is your first impression. You can include a photo, your mission statement, and something which defines you. In our example, we have included a quote.-->
     <main>
         <p></p>
     </main>
-
+fgfg<br>
+fgfg<br>
+fgfg<br>
+fgfg<br>
+fgfg<br>
+fgfg<br>
+fgfg<br>
+fgfg<br>
+fgfg<br>
+fgfg<br>
+fgfg<br>
+fgfg<br>
+fgfg<br>
+fgfg<br>
+fgfg<br>
+fgfg<br>
+fgfg<br>
+fgfg<br>
+fgfg<br>
     <section>
 
     </section>
@@ -31,7 +51,6 @@
     <footer>
         Links and extra info here
     </footer>
-
+    </div>
 </body>
-
 </html>
