--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -9,6 +9,7 @@
 <body>
 
     <nav id="nav">
+        <p>Tyler Lincoln</p>
         <img src="/Black And White Business Logo.png"></img>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
