--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -8,7 +8,8 @@
 
 <body>
 
-        <nav id="nav">
+    <nav id="nav">
+        <p>Tyler Lincoln</p>
         <img src="/Black And White Business Logo.png"></img>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
