Added flex boxes on the home page and touched some little details up

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -17,6 +17,8 @@
         <a href="contact.html">Contact</a>
     </nav>
 
+    <div class="maindiv">
+
     <h1>ABOUT PAGE</h1>
 
     <!--An about page is a place for people to get to know you. You should include your interests, and things you are good at, and in general you should pull back enough of the curtain into your life to interest a potential employer in you as a person.-->
@@ -31,6 +33,7 @@
         Links and extra info here
     </footer>
 
-</body>
+    </div>
 
+</body>
 </html>
