--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -17,6 +17,8 @@
         <a href="contact.html">Contact</a>
     </nav>
 
+    <div class="maindiv">
+
     <h1>CONTACT PAGE</h1>
 
     <!--A page where anyone interested in my work, skills, or services can contact me-->
@@ -32,6 +34,7 @@
         Links and extra info here
     </footer>
 
-</body>
+    </div>
 
+</body>
 </html>
