--- a/HTML/index.html
+++ b/HTML/index.html
@@ -23,27 +23,45 @@
 
     <!--The landing page is your first impression. You can include a photo, your mission statement, and something which defines you. In our example, we have included a quote.-->
     <main>
-        <p></p>
+        <h1 class="mainhead">Thinker | Creator | Innovator</h1>
+        <h2 class="mainhead2">I am dedicated to leaving a mark on the world by developing life-changing software and <br> applications; and inspiring others to unleash their own transformative potential.</h2>
+
+        <div class="indexsummary">
+            
+            <section>
+                <h3>Interests</h3>
+                <ul>
+                    <li>Coding</li>
+                    <li>Photography</li>
+                    <li>Hiking/traveling</li>
+                    <li>Reading/learning</li>
+                    <li>Writing</li>
+                    <li>Content creation</li>
+                    <li>Entrepreneurship</li>
+                </ul>
+            </section>
+
+            <section>
+                <h3>Goals</h3>
+                <ul>
+                    <li>Start a company (or two)</li>
+                    <li>Develop life-changing software</li>
+                    <li>Run a hiking page</li>
+                    <li>Create a hiking app</li>
+                    <li>Get into the VR and AI space</li>
+                    <li>Travel the world</li>
+                    <li>Make a powerful impact</li>
+                </ul>
+            </section>
+
+            <section>
+                <h3>Skills</h3>
+                333333333
+            </section>
+        </div>
+
     </main>
-fgfg<br>
-fgfg<br>
-fgfg<br>
-fgfg<br>
-fgfg<br>
-fgfg<br>
-fgfg<br>
-fgfg<br>
-fgfg<br>
-fgfg<br>
-fgfg<br>
-fgfg<br>
-fgfg<br>
-fgfg<br>
-fgfg<br>
-fgfg<br>
-fgfg<br>
-fgfg<br>
-fgfg<br>
+
     <section>
 
     </section>
