--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -17,6 +17,8 @@
         <a href="contact.html">Contact</a>
     </nav>
 
+    <div class="maindiv">
+
     <h1>PORTFOLIO PAGE</h1>
 
     <!--The portfolio page is the meat and potatoes of your personal site, here you want to include the projects you have worked on. For each project you wish to showcase, you should include the name of your project, a brief description, a screenshot, and a link to where it lives on the web.-->
@@ -32,6 +34,7 @@
         Links and extra info here
     </footer>
 
-</body>
+    </div>
 
+</body>
 </html>
