Added coding icon images and names to 'skills' flexbox

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -56,9 +56,36 @@
 
             <section>
                 <h3>Skills</h3>
-                333333333
+                <ul id="SkillList">
+                    <li>
+                        <img src="/HTMLLogo.png" alt="HTML Icon" id="CodingIcons">
+                        <p>HTML</p>
+                    </li>
+
+                    <li>
+                        <img src="/CSSLogo.png" alt="CSS Icon" id="CodingIcons">
+                        <p>CSS</p>
+                    </li>
+
+                    <li>
+                        <img src="/JSLogo.png" alt="Javascript Icon" id="CodingIcons">
+                        <p>Javascript</p>
+                    </li>
+
+                    <li>
+                        <img src="/GitBashLogo.png" alt="Git Bash Icon" id="CodingIcons">
+                        <p>Git Bash</p>
+                    </li>
+
+                    <li>
+                        <img src="/GitHubLogo.png" alt="GitHub Icon" class="GitIcon" id="CodingIcons">
+                        <p>GitHub</p>
+                    </li>
+                </ul>
             </section>
         </div>
+
+        <h1>SOME QUOTE</h1>
 
     </main>
 
