Realigned the icons in skill box + added bootstrap. Changed 'About Me' page color. Added quote to homepage.

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -17,13 +17,14 @@
         <a href="contact.html">Contact</a>
     </nav>
 
-    <div class="maindiv">
+    <div class="aboutdiv">
 
     <h1>ABOUT PAGE</h1>
 
     <!--An about page is a place for people to get to know you. You should include your interests, and things you are good at, and in general you should pull back enough of the curtain into your life to interest a potential employer in you as a person.-->
     <main>
-        <p>About me paragraph</p>
+        <h1 class="mainhead">Who is Tyler Lincoln?</h1>
+        <hr>
     </main>
         <section>
 
