--- a/HTML/index.html
+++ b/HTML/index.html
@@ -34,8 +34,8 @@
                     <li>Coding</li>
                     <li>Photography</li>
                     <li>Hiking/traveling</li>
-                    <li>Reading/learning</li>
-                    <li>Writing</li>
+                    <li>Reading/writing</li>
+                    <li>Cryptocurrency</li>
                     <li>Content creation</li>
                     <li>Entrepreneurship</li>
                 </ul>
@@ -55,11 +55,13 @@
             </section>
 
             <section>
-                <h3>Skills</h3>
+                <h3 id="SkillsHead">Skills</h3>
                 <ul id="SkillList">
                     <li>
                         <img src="/HTMLLogo.png" alt="HTML Icon" id="CodingIcons">
                         <p>HTML</p>
+                        <img src="/BootstrapLogo.png" alt="Bootstrap Icon" id="CodingIcons">
+                        <p id="BootstrapP">Bootstrap</p>
                     </li>
 
                     <li>
@@ -85,15 +87,18 @@
             </section>
         </div>
 
-        <h1>SOME QUOTE</h1>
-
+        <h1 id="quote">"It's not dying that frightens us, it's living without ever having done our best" - Elder</h1>
+        <hr>
     </main>
 
-    <section>
+    <section class="HomeIntro">
+        <img src="/FSALogo.png" alt="FSA Icon" class="FSAIcon">
+        <h1>My Fullstack Journey</h1>
+        <p class="HomeIntroP"><span style="font-family: Apple Chancery, cursive; font-size: 2rem;">H</span>ello world</p>
 
     </section>
-
-    <footer>
+    <br><br><br><br><br><br><br><br><br><br>
+    <footer style="color: white;">
         Links and extra info here
     </footer>
     </div>
