Worked on the home page + added descriptions + pictures

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -93,11 +93,20 @@
 
     <section class="HomeIntro">
         <img src="/FSALogo.png" alt="FSA Icon" class="FSAIcon">
-        <h1>My Fullstack Journey</h1>
-        <p class="HomeIntroP"><span style="font-family: Apple Chancery, cursive; font-size: 2rem;">H</span>ello world</p>
-
+        <h1>My Fullstack Academy Journey</h1>
+        <p class="HomeIntroP"><span style="font-family: Apple Chancery, cursive; font-size: 2rem;">H</span>ello everyone! <br>My name is Tyler Lincoln and I'm a student at Fullstack Academy. Right now I'm in the beginning of the cohort learning all about HTML, CSS, and Javascript. We're also learning about Git, Bootstrap, and how to use Github.<br> So far everything has been smooth and I'm having no issues completing any assignments or projects given to me.
+        </p>
+        <br><br><br><br><br><br><br><br><br><br><br><br>
     </section>
-    <br><br><br><br><br><br><br><br><br><br>
+    
+    <hr id="SectionHR">
+
+    <section class="HomeIntroTwo">
+        <img src="/FutureGoals.jpg" alt="Future Goals Image" class="FGImage">
+        <h1>My Journey After FSA</h1>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    </section>
+
     <footer style="color: white;">
         Links and extra info here
     </footer>
