--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,7 +10,7 @@
 
     <nav id="nav">
         <p>Tyler Lincoln</p>
-        <img src="/Black And White Business Logo.png"></img>
+        <img src="/Pictures/Black And White Business Logo.png"></img>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="portfolio.html">Portfolio</a>
@@ -58,29 +58,29 @@
                 <h3 id="SkillsHead">Skills</h3>
                 <ul id="SkillList">
                     <li>
-                        <img src="/HTMLLogo.png" alt="HTML Icon" id="CodingIcons">
+                        <img src="/Pictures/HTMLLogo.png" alt="HTML Icon" id="CodingIcons">
                         <p>HTML</p>
-                        <img src="/BootstrapLogo.png" alt="Bootstrap Icon" id="CodingIcons">
+                        <img src="/Pictures/BootstrapLogo.png" alt="Bootstrap Icon" id="CodingIcons">
                         <p id="BootstrapP">Bootstrap</p>
                     </li>
 
                     <li>
-                        <img src="/CSSLogo.png" alt="CSS Icon" id="CodingIcons">
+                        <img src="/Pictures/CSSLogo.png" alt="CSS Icon" id="CodingIcons">
                         <p>CSS</p>
                     </li>
 
                     <li>
-                        <img src="/JSLogo.png" alt="Javascript Icon" id="CodingIcons">
+                        <img src="/Pictures/JSLogo.png" alt="Javascript Icon" id="CodingIcons">
                         <p>Javascript</p>
                     </li>
 
                     <li>
-                        <img src="/GitBashLogo.png" alt="Git Bash Icon" id="CodingIcons">
+                        <img src="/Pictures/GitBashLogo.png" alt="Git Bash Icon" id="CodingIcons">
                         <p>Git Bash</p>
                     </li>
 
                     <li>
-                        <img src="/GitHubLogo.png" alt="GitHub Icon" class="GitIcon" id="CodingIcons">
+                        <img src="/Pictures/GitHubLogo.png" alt="GitHub Icon" class="GitIcon" id="CodingIcons">
                         <p>GitHub</p>
                     </li>
                 </ul>
@@ -92,7 +92,7 @@
     </main>
 
     <section class="HomeIntro">
-        <img src="/FSALogo.png" alt="FSA Icon" class="FSAIcon">
+        <img src="/Pictures/FSALogo.png" alt="FSA Icon" class="FSAIcon">
         <h1>My Fullstack Academy Journey</h1>
         <p class="HomeIntroP"><span style="font-family: Apple Chancery, cursive; font-size: 2rem;">H</span>ello everyone! <br>My name is Tyler Lincoln and I'm a student at Fullstack Academy. Right now I'm in the beginning of the cohort learning all about HTML, CSS, and Javascript. We're also learning about Git, Bootstrap, and how to use Github.<br> So far everything has been smooth and I'm having no issues completing any assignments or projects given to me.
         </p>
@@ -102,7 +102,7 @@
     <hr id="SectionHR">
 
     <section class="HomeIntroTwo">
-        <img src="/FutureGoals.jpg" alt="Future Goals Image" class="FGImage">
+        <img src="/Pictures/FutureGoals.jpg" alt="Future Goals Image" class="FGImage">
         <h1>My Journey After FSA</h1>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </section>
