Fixed main header clipping into navbar + added text to 'future goals' section on home page

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Home Page</title>
     <link rel="stylesheet" href="/styles.css"></link>
+    <script src="/app.js"></script>
 </head>
 
 <body>
@@ -19,9 +20,6 @@
 
     <div class="maindiv">
 
-    <h1>TYLER LINCOLN</h1>
-
-    <!--The landing page is your first impression. You can include a photo, your mission statement, and something which defines you. In our example, we have included a quote.-->
     <main>
         <h1 class="mainhead">Thinker | Creator | Innovator</h1>
         <h2 class="mainhead2">I am dedicated to leaving a mark on the world by developing life-changing software and <br> applications; and inspiring others to unleash their own transformative potential.</h2>
@@ -96,7 +94,7 @@
         <h1>My Fullstack Academy Journey</h1>
         <p class="HomeIntroP"><span style="font-family: Apple Chancery, cursive; font-size: 2rem;">H</span>ello everyone! <br>My name is Tyler Lincoln and I'm a student at Fullstack Academy. Right now I'm in the beginning of the cohort learning all about HTML, CSS, and Javascript. We're also learning about Git, Bootstrap, and how to use Github.<br> So far everything has been smooth and I'm having no issues completing any assignments or projects given to me.
         </p>
-        <br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br>
     </section>
     
     <hr id="SectionHR">
@@ -104,7 +102,8 @@
     <section class="HomeIntroTwo">
         <img src="/Pictures/FutureGoals.jpg" alt="Future Goals Image" class="FGImage">
         <h1>My Journey After FSA</h1>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <p class="HomeIntroP"><span style="font-family: Apple Chancery, cursive; font-size: 2rem;">M</span>y goals for the future after fullstack are going to be pretty ambitious; as I'm an entrepreneur at heart. I will absolutely pursue a professional career to expand my knowledge, credentials, and connections in the tech industry, and will use it's generous salary to invest into my ideas.<br><br> I will be building multiple applications that I hope will help change the world for the better. Of course I can't disclose the details as of yet, but I have at least three life-changing ones in mind, and two for fun!</p><br><br>
+
     </section>
 
     <footer style="color: white;">
