Working on Footer - only squares are left to do

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -10,7 +10,7 @@
 
     <nav id="nav">
         <p>Tyler Lincoln</p>
-        <img src="/Black And White Business Logo.png"></img>
+        <img src="/Pictures/Black And White Business Logo.png"></img>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="portfolio.html">Portfolio</a>
