--- a/HTML/index.html
+++ b/HTML/index.html
@@ -105,10 +105,41 @@
         <p class="HomeIntroP"><span style="font-family: Apple Chancery, cursive; font-size: 2rem;">M</span>y goals for the future after fullstack are going to be pretty ambitious; as I'm an entrepreneur at heart. I will absolutely pursue a professional career to expand my knowledge, credentials, and connections in the tech industry, and will use it's generous salary to invest into my ideas.<br><br> I will be building multiple applications that I hope will help change the world for the better. Of course I can't disclose the details as of yet, but I have at least three life-changing ones in mind, and two for fun!</p><br><br>
 
     </section>
-
-    <footer style="color: white;">
-        Links and extra info here
-    </footer>
     </div>
+    <footer class="footerOne" style="color: white;">
+        <div class="footerDivOne">
+            <a href="about.html">About</a><br><br><br>
+            <a href="portfolio.html">Portfolio</a><br><br><br>
+            <a href="contact.html">Contact</a>
+        </div>
+        <div class="squares">
+        <span class="squareComplete">1</span>
+        <span class="squareComplete">2</span>
+        <span class="squareComplete">3</span>
+        <span class="squareComplete">4</span>
+        <span class="squareComplete">5</span>
+        <span class="squareComplete">6</span>
+        <span class="squareIncomplete">7</span>
+        <span class="squareIncomplete">8</span>
+        <span class="squareIncomplete">9</span>
+        <span class="squareIncomplete">10</span>
+        <span class="squareIncomplete">11</span>
+        <span class="squareIncomplete">12</span>
+        <span class="squareIncomplete">13</span>
+        <span class="squareIncomplete">14</span><br><br><br><br>
+        <span class="squareIncomplete">15</span>
+        <span class="squareIncomplete">16</span>
+        <span class="squareIncomplete">17</span>
+        <span class="squareIncomplete">18</span>
+        <span class="squareIncomplete">19</span>
+        <span class="squareIncomplete">20</span>
+        <span class="squareIncomplete">21</span>
+        <span class="squareIncomplete">22</span>
+        <span class="squareIncomplete">23</span>
+        <span class="squareIncomplete">24</span>
+        <span class="squareIncomplete">25</span>
+        <span class="squareIncomplete">26</span>
+        </div>
+    </footer>
 </body>
 </html>
