Finished footer + fixed a bug where a header on the home page appeared over the navbar (position relative issue - fixed with padding)

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -92,7 +92,7 @@
     <section class="HomeIntro">
         <img src="/Pictures/FSALogo.png" alt="FSA Icon" class="FSAIcon">
         <h1>My Fullstack Academy Journey</h1>
-        <p class="HomeIntroP"><span style="font-family: Apple Chancery, cursive; font-size: 2rem;">H</span>ello everyone! <br>My name is Tyler Lincoln and I'm a student at Fullstack Academy. Right now I'm in the beginning of the cohort learning all about HTML, CSS, and Javascript. We're also learning about Git, Bootstrap, and how to use Github.<br> So far everything has been smooth and I'm having no issues completing any assignments or projects given to me.
+        <p class="HomeIntroP"><span style="font-family: Apple Chancery, cursive; font-size: 2rem;">H</span>ello everyone! <br><br>My name is Tyler Lincoln and I'm a student at Fullstack Academy. Right now I'm in the beginning of the cohort learning all about HTML, CSS, and Javascript. We're also learning about Git, Bootstrap, and how to use Github.<br> So far everything has been smooth and I'm having no issues completing any assignments or projects given to me.
         </p>
         <br><br><br>
     </section>
@@ -112,6 +112,11 @@
             <a href="portfolio.html">Portfolio</a><br><br><br>
             <a href="contact.html">Contact</a>
         </div>
+        <div class="squareHeaderPar">
+         <div class="squareHeader">
+            <h1>FullStack Academy Journey (Weeks)</h1>
+         </div>
+        </div>
         <div class="squares">
         <span class="squareComplete">1</span>
         <span class="squareComplete">2</span>
@@ -122,23 +127,23 @@
         <span class="squareIncomplete">7</span>
         <span class="squareIncomplete">8</span>
         <span class="squareIncomplete">9</span>
-        <span class="squareIncomplete">10</span>
-        <span class="squareIncomplete">11</span>
-        <span class="squareIncomplete">12</span>
-        <span class="squareIncomplete">13</span>
-        <span class="squareIncomplete">14</span><br><br><br><br>
-        <span class="squareIncomplete">15</span>
-        <span class="squareIncomplete">16</span>
-        <span class="squareIncomplete">17</span>
-        <span class="squareIncomplete">18</span>
-        <span class="squareIncomplete">19</span>
-        <span class="squareIncomplete">20</span>
-        <span class="squareIncomplete">21</span>
-        <span class="squareIncomplete">22</span>
-        <span class="squareIncomplete">23</span>
-        <span class="squareIncomplete">24</span>
-        <span class="squareIncomplete">25</span>
-        <span class="squareIncomplete">26</span>
+        <span class="squareIncomplete" id="doubleNumSquare">10</span>
+        <span class="squareIncomplete" id="doubleNumSquare">11</span>
+        <span class="squareIncomplete" id="doubleNumSquare">12</span>
+        <span class="squareIncomplete" id="doubleNumSquare">13</span>
+        <span class="squareIncomplete" id="doubleNumSquare">14</span><br><br><br><br>
+        <span class="squareIncomplete" id="doubleNumSquare">15</span>
+        <span class="squareIncomplete" id="doubleNumSquare">16</span>
+        <span class="squareIncomplete" id="doubleNumSquare">17</span>
+        <span class="squareIncomplete" id="doubleNumSquare">18</span>
+        <span class="squareIncomplete" id="doubleNumSquare">19</span>
+        <span class="squareIncomplete" id="doubleNumSquare">20</span>
+        <span class="squareIncomplete" id="doubleNumSquare">21</span>
+        <span class="squareIncomplete" id="doubleNumSquare">22</span>
+        <span class="squareIncomplete" id="doubleNumSquare">23</span>
+        <span class="squareIncomplete" id="doubleNumSquare">24</span>
+        <span class="squareIncomplete" id="doubleNumSquare">25</span>
+        <span class="squareIncomplete" id="doubleNumSquare">26</span>
         </div>
     </footer>
 </body>
