Added social icons to nav bar

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,6 +5,7 @@
     <title>Home Page</title>
     <link rel="stylesheet" href="/styles.css"></link>
     <script src="/app.js"></script>
+    <script> document.createElement("social");</script>
 </head>
 
 <body>
@@ -17,6 +18,14 @@
         <a href="portfolio.html">Portfolio</a>
         <a href="contact.html">Contact</a>
     </nav>
+    <social class="navSocialSquare">
+    <a href="https://www.linkedin.com/in/tyler-lincoln-538835285/">
+        <img src="/Pictures/LinkedinLogo.png">
+    </a>
+    <a href="https://github.com/LookeiCode" class="navSocialSquare">
+        <img src="/Pictures/GitHubLogoNav.png">
+    </a>
+    </social>
 
     <div class="maindiv">
 
