Finished the 'about page'

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -17,11 +17,17 @@
         <a href="contact.html">Contact</a>
     </nav>
 
+    <social class="navSocialSquare">
+        <a href="https://www.linkedin.com/in/tyler-lincoln-538835285/">
+            <img src="/Pictures/LinkedinLogo.png">
+        </a>
+        <a href="https://github.com/LookeiCode" class="navSocialSquare">
+            <img src="/Pictures/GitHubLogoNav.png">
+        </a>
+    </social>
+
     <div class="maindiv">
 
-    <h1>CONTACT PAGE</h1>
-
-    <!--A page where anyone interested in my work, skills, or services can contact me-->
     <main>
         <p>Contact me message</p>
     </main>
@@ -30,11 +36,48 @@
 
     </form>
         
-    <footer>
-        Links and extra info here
-    </footer>
-
     </div>
+
+    <footer class="footerOne" style="color: white;">
+        <div class="footerDivOne">
+            <a href="about.html">About</a><br><br><br>
+            <a href="portfolio.html">Portfolio</a><br><br><br>
+            <a href="contact.html">Contact</a>
+        </div>
+        <div class="squareHeaderPar">
+         <div class="squareHeader">
+            <h1>FullStack Academy Journey (Weeks)</h1>
+         </div>
+        </div>
+        <div class="squares">
+        <span class="squareComplete">1</span>
+        <span class="squareComplete">2</span>
+        <span class="squareComplete">3</span>
+        <span class="squareComplete">4</span>
+        <span class="squareComplete">5</span>
+        <span class="squareComplete">6</span>
+        <span class="squareIncomplete">7</span>
+        <span class="squareIncomplete">8</span>
+        <span class="squareIncomplete">9</span>
+        <span class="squareIncomplete" id="doubleNumSquare">10</span>
+        <span class="squareIncomplete" id="doubleNumSquare">11</span>
+        <span class="squareIncomplete" id="doubleNumSquare">12</span>
+        <span class="squareIncomplete" id="doubleNumSquare">13</span><br><br><br><br>
+        <span class="squareIncomplete" id="doubleNumSquare">14</span>
+        <span class="squareIncomplete" id="doubleNumSquare">15</span>
+        <span class="squareIncomplete" id="doubleNumSquare">16</span>
+        <span class="squareIncomplete" id="doubleNumSquare">17</span>
+        <span class="squareIncomplete" id="doubleNumSquare">18</span>
+        <span class="squareIncomplete" id="doubleNumSquare">19</span>
+        <span class="squareIncomplete" id="doubleNumSquare">20</span>
+        <span class="squareIncomplete" id="doubleNumSquare">21</span>
+        <span class="squareIncomplete" id="doubleNumSquare">22</span>
+        <span class="squareIncomplete" id="doubleNumSquare">23</span>
+        <span class="squareIncomplete" id="doubleNumSquare">24</span>
+        <span class="squareIncomplete" id="doubleNumSquare">25</span>
+        <span class="squareIncomplete" id="doubleNumSquare">26</span>
+        </div>
+    </footer>
 
 </body>
 </html>
