--- a/HTML/index.html
+++ b/HTML/index.html
@@ -94,7 +94,8 @@
             </section>
         </div>
 
-        <h1 id="quote">"It's not dying that frightens us, it's living without ever having done our best" - Elder</h1>
+        <h1 id="quote">"It's not dying that frightens us, it's living without ever having done our best" - Elder
+        </h1>
         <hr>
     </main>
 
@@ -139,8 +140,8 @@
         <span class="squareIncomplete" id="doubleNumSquare">10</span>
         <span class="squareIncomplete" id="doubleNumSquare">11</span>
         <span class="squareIncomplete" id="doubleNumSquare">12</span>
-        <span class="squareIncomplete" id="doubleNumSquare">13</span>
-        <span class="squareIncomplete" id="doubleNumSquare">14</span><br><br><br><br>
+        <span class="squareIncomplete" id="doubleNumSquare">13</span><br><br><br><br>
+        <span class="squareIncomplete" id="doubleNumSquare">14</span>
         <span class="squareIncomplete" id="doubleNumSquare">15</span>
         <span class="squareIncomplete" id="doubleNumSquare">16</span>
         <span class="squareIncomplete" id="doubleNumSquare">17</span>
