Form submit page done - ENTIRE PROJECT COMPLETE!

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -52,7 +52,7 @@
             <input type="text" id="email" name="email" style="box-shadow: 0 3px 6px -2px black;"><br><br>
 
             <label for="message">Message:</label>
-            <textarea class="longInput" cols="30" rows="10"  style="box-shadow: 0 3px 6px -2px black; height: 100px;"></textarea><br><br> 
+            <textarea name="message" cols="30" rows="10"  style="box-shadow: 0 3px 6px -2px black; height: 100px;"></textarea><br><br> 
 
             <input type="submit" value="Submit" id ="submit" style="height:50px; width:150px">
             <br><br>
