--- a/HTML/formSubmit.html
+++ b/HTML/formSubmit.html
@@ -7,6 +7,26 @@
 </head>
 
 <body>
+
+    <nav id="nav">
+        <p>Tyler Lincoln</p>
+        <img src="/Pictures/Black And White Business Logo.png"></img>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+    </nav>
+
+    <social class="navSocialSquare">
+        <a href="https://www.linkedin.com/in/tyler-lincoln-538835285/">
+            <img src="/Pictures/LinkedinLogo.png">
+        </a>
+        <a href="https://github.com/LookeiCode" class="navSocialSquare">
+            <img src="/Pictures/GitHubLogoNav.png">
+        </a>
+    </social>
+
+
     <div class="formSubDiv">
 
         <h1>You have succesfully submitted your form!</h1>
@@ -14,9 +34,46 @@
         <p>You can now exit this page</p>
     </div>
 
-    <div style="text-align: center;">
-        <img src="https://i.imgflip.com/7sj4ua.jpg" style="width: 450px; height: 350px;"></img>
-    </div>
+    <footer class="footerOne" style="color: white;">
+        <div class="footerDivOne">
+            <a href="about.html">About</a><br><br><br>
+            <a href="portfolio.html">Portfolio</a><br><br><br>
+            <a href="contact.html">Contact</a>
+        </div>
+        <div class="squareHeaderPar">
+         <div class="squareHeader">
+            <h1>FullStack Academy Journey (Weeks)</h1>
+         </div>
+        </div>
+        <div class="squares">
+        <span class="squareComplete">1</span>
+        <span class="squareComplete">2</span>
+        <span class="squareComplete">3</span>
+        <span class="squareComplete">4</span>
+        <span class="squareComplete">5</span>
+        <span class="squareComplete">6</span>
+        <span class="squareIncomplete">7</span>
+        <span class="squareIncomplete">8</span>
+        <span class="squareIncomplete">9</span>
+        <span class="squareIncomplete" id="doubleNumSquare">10</span>
+        <span class="squareIncomplete" id="doubleNumSquare">11</span>
+        <span class="squareIncomplete" id="doubleNumSquare">12</span>
+        <span class="squareIncomplete" id="doubleNumSquare">13</span><br><br><br><br>
+        <span class="squareIncomplete" id="doubleNumSquare">14</span>
+        <span class="squareIncomplete" id="doubleNumSquare">15</span>
+        <span class="squareIncomplete" id="doubleNumSquare">16</span>
+        <span class="squareIncomplete" id="doubleNumSquare">17</span>
+        <span class="squareIncomplete" id="doubleNumSquare">18</span>
+        <span class="squareIncomplete" id="doubleNumSquare">19</span>
+        <span class="squareIncomplete" id="doubleNumSquare">20</span>
+        <span class="squareIncomplete" id="doubleNumSquare">21</span>
+        <span class="squareIncomplete" id="doubleNumSquare">22</span>
+        <span class="squareIncomplete" id="doubleNumSquare">23</span>
+        <span class="squareIncomplete" id="doubleNumSquare">24</span>
+        <span class="squareIncomplete" id="doubleNumSquare">25</span>
+        <span class="squareIncomplete" id="doubleNumSquare">26</span>
+        </div>
+    </footer>
 </body>
 
 </html>
